# trading-pipeline

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  mypy.ini  pyproject.toml
.github/workflows/: cpplintformat.yml  cppmake.yml  make-final.yml  pyintegration.yml  pytest.yml
instructions/: 0_introduction.md  1.md  2.md  3.md  4.md  5.md  intro.md  introduction.md
src/cppsrc/: base_feature.hpp  main.cpp
src/cppsrc/data/: data_client.hpp  features.hpp  signal.hpp
src/cppsrc/features/: base_feature.hpp  buy_trades_feature.cpp  buy_trades_feature.hpp  five_tick_volume_feature.hpp  five_ticks_volume_feature.hpp  number_trades_feature.hpp  percent_buy_feature.hpp  percent_sell_feature.hpp  sell_trades_feature.cpp  sell_trades_feature.hpp
src/cppsrc/test/: test_data_client.cpp  test_feature_five_tick_volume.cpp  test_feature_n_trades.cpp  test_feature_number_trades.cpp  test_feature_pct_buy_trades.cpp  test_feature_pct_sell_trades.cpp  test_feature_percent_buy.cpp  test_feature_percent_sell.cpp  test_feature_sum_5tick_volume.cpp  test_signal.cpp
src/cppsrc/test/unit/: test_basic.cpp  test_data_client.cpp  test_feature_five_tick_volume.cpp  test_feature_number_trades.cpp  test_feature_pct_buy_trades.cpp  test_feature_sum_5tick_volume.cpp
src/pysrc/: correlation.py  data_client.py  main.py  model.py  model_eval.py  test_data.txt
src/pysrc/correlation/: correlation.py
src/pysrc/data/: test_data.txt
src/pysrc/eval/: model_eval.py
src/pysrc/test/integration/: test_gemini.py  test_integration.py
src/pysrc/test/unit/: test_basic.py  test_data_client.py  test_model.py  test_pybind.py
