[tool.poetry]
name = "intern-project"
version = "0.1.0"
description = ""
authors = ["Romir Mohan"]
readme = "README.md"
packages = [
  {include = "pysrc", from = "src"}
]

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20241016"

[project]
name = "intern-project"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [
  {include = "pysrc", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
mypy = "^1.12.1"
ruff = "^0.7.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
pandas-stubs = "^2.2.3.241126"
tqdm-stubs = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
# ignore unused imports since they are helpful for the template
"*.py" = ["F401"]
